# zk-reputatation-marketplace

./: .gitignore  README.md  package.json
front-end/: package.json
front-end/src/components/: Header.tsx  Item.tsx
front-end/src/pages/: _app.tsx  index.tsx  profile.tsx
front-end/src/pages/items/: [name].tsx
front-end/src/theme/: theme.ts
front-end/src/utils/: ipfs.ts  networkHelpers.ts
frontend/components/: Header.tsx  Layout.tsx
frontend/pages/: _app.tsx  _document.tsx
ink_risc0_verifier/: Cargo.toml  README.md  lib.rs
ink_risc0_verifier/factors/: README.md
ink_risc0_verifier/factors/methods/: Cargo.toml
ink_risc0_verifier/factors/methods/guest/: Cargo.toml
marketplace/: Cargo.toml  lib.rs
marketplace/asset/: Cargo.toml  lib.rs
marketplace/user/: Cargo.toml  lib.rs
proof-1/: README.md
proof-1/host/: Cargo.toml
proof-1/host/src/: main.rs
proof-1/methods/: Cargo.toml
proof-1/methods/src/: lib.rs
proof-2/: Cargo.toml  README.md
proof-2/methods/: Cargo.toml
proof-2/methods/guest/: Cargo.toml
proof-2/methods/guest/src/: main.rs
proof-2/methods/src/: lib.rs
proof-2/src/: main.rs
risc0/host/: Cargo.toml
risc0/host/src/: main.rs
risc0/methods/guest/: Cargo.toml
src/components/: Header.tsx  Item.tsx  Layout.tsx  NewItem.tsx
src/pages/: _app.tsx  index.tsx  profile.tsx
src/pages/items/: [name].tsx
src/pages/users/[id]/: profile.jsx  profile.tsx
src/theme/: theme.ts
src/utils/: fake.ts  helpers.ts  ipfs.ts  types.ts
