[package]
name = "marketplace"
version = "0.1.0"
authors = ["zkhack team"]
edition = "2021"

[dependencies]
ink = { version = "4.0.1", default-features = false }
risc0-zkvm = { version = "0.14", default-features = false }
risc0-zkp = { version = "0.14", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

ink_risc0_verifier = { path = "../ink_risc0_verifier", default-features = false, features = ["ink-as-dependency"] }

proof1 = { package = "methods", path = "../proof-1/methods", default-features = false }
proof2 = { package = "factors-methods", path = "../proof-2/methods", default-features = false }

[dev-dependencies]
ink_e2e = "4.0.1"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "risc0-zkvm/std",
    "risc0-zkp/std",
    "scale/std",
    "scale-info/std",
    "ink_risc0_verifier/std",

]
ink-as-dependency = []
e2e-tests = []

[profile.dev.build-override]
opt-level = 3

